# MortgageFintechOS-

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  app.js  coding-ontology.html  fly.toml  index.html  koyeb.yaml  main.py  mortgage-ontology.html  netlify.toml  ontology.html  orchestration.html  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup.sh  vercel.json
.claude/: LOOPS.md  settings.json
.netlify/: state.json
agents/: __init__.py  ambassador.py  atlas.py  base.py  cipher.py  diego.py  forge.py  herald.py  hunter.py  jarvis.py  martin.py  nexus.py  nova.py  sentinel.py  skills.py  storm.py
config/: settings.py
core/: __init__.py  agent_builder.py  aios_kernel.py  ontology_engine.py  orchestrator.py  task_queue.py
dashboard/: __init__.py  server.py
docker/: Dockerfile  docker-compose.yml  mortgagefintechos.service
integrations/: __init__.py  agent_ui_api.py  browser_client.py  gdrive_client.py  ghost_client.py  github_client.py  llm_client.py  llm_router.py  notifications.py  notion_client.py  paperclip_service.py  pentagi_client.py  telegram_bot.py  total_expert_client.py  twitter_client.py  webhooks.py  wispr_client.py
knowledge/: __init__.py  reference_store.py
monitoring/: __init__.py  action_log.py  health_monitor.py  hydrospeed.py  telemetry.py
persistence/: __init__.py  agent_database.py  state_store.py
public/: _redirects  index.html  mortgage-ontology.html  ontology.html  orchestration.html  style.css
schedulers/: __init__.py  daily_scheduler.py
scripts/: check-health.sh
(+26 files in other folders)
